# Deepfake-AI-Detector

./: .gitignore  README.md  index.html  script.js  server.js  style.css
deepfake-api/: app.py  detector.py  diagnose.py  requirements.txt
deepfake-detector/: .env.example  .gitignore  Colab_Training.ipynb  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
deepfake-detector/api/: app.py  dependencies.py  logging_config.py  startup_validation.py
deepfake-detector/api/routers/: __init__.py  detection.py  health.py
deepfake-detector/api/schemas/: __init__.py  request.py  response.py
deepfake-detector/checkpoints/: README.md
deepfake-detector/configs/: base.yaml
deepfake-detector/configs/data/: default.yaml
deepfake-detector/configs/evaluation/: default.yaml
deepfake-detector/configs/inference/: default.yaml
deepfake-detector/configs/model/: efficientnet_b0.yaml  efficientnet_b4.yaml
deepfake-detector/configs/training/: default.yaml  finetuning.yaml
deepfake-detector/core/: __init__.py  detector.py  model_registry.py  postprocessor.py  preprocessor.py
deepfake-detector/data/: __init__.py  datamodule.py  dataset.py  sampler.py  transforms.py
deepfake-detector/evaluation/: __init__.py  benchmark.py  evaluator.py  metrics.py  visualiser.py
deepfake-detector/models/: __init__.py  base.py  efficientnet.py  vit.py  xception.py
deepfake-detector/reports/: root_cause_analysis.txt  verification_report.txt
deepfake-detector/scripts/: benchmark_inference.py  diagnose.py  evaluate.py  expand_dataset.py  export_onnx.py  populate_dataset.py  setup_cifake.py  train.py  verify_inference.py
deepfake-detector/tests/: conftest.py
deepfake-detector/tests/integration/: test_detect_endpoint.py  test_health_endpoint.py
deepfake-detector/tests/unit/: test_model_registry.py  test_postprocessor.py  test_preprocessor.py
deepfake-detector/training/: __init__.py  augmentations.py  callbacks.py  losses.py  optimizers.py  trainer.py
