[project]
name = "deepfake-detector"
version = "2.0.0"
description = "Production-grade deepfake image detection API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.4",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "black>=24.0", "mypy>=1.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["slow: marks slow tests (model inference)"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
