[project]
name = "deepfake-detector"
version = "2.0.0"
description = "Production-grade deepfake image detection API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Deepfake Detector Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.4",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.4",
    "isort>=5.13",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pre-commit>=3.0",
]

train = [
    "PyYAML>=6.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "tensorboard>=2.15",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/vinithalakhwani6869-ops/Deepfake-AI-Detector"
Repository = "https://github.com/vinithalakhwani6869-ops/Deepfake-AI-Detector.git"
Issues = "https://github.com/vinithalakhwani6869-ops/Deepfake-AI-Detector/issues"

# ════════════════════════════════════════════════════════════════════════════════
# Testing Configuration
# ════════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."] 
markers = [
    "slow: marks tests as slow (inference benchmarks)",
    "gpu: marks tests requiring GPU",
    "unit: unit tests (no external dependencies)",
    "integration: integration tests",
]
addopts = "-v --tb=short --strict-markers"
minversion = "8.0"

# ════════════════════════════════════════════════════════════════════════════════
# Code Formatting & Linting
# ════════════════════════════════════════════════════════════════════════════════

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | scripts
  | checkpoints
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["api", "core", "data", "training", "evaluation"]
skip_glob = ["**/migrations/**", "**/scripts/**"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "ANN101", # self not annotated (convention)
    "ANN102", # cls not annotated (convention)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__
"tests/**" = ["ANN"]     # Skip annotations in tests

# ════════════════════════════════════════════════════════════════════════════════
# Type Checking
# ════════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Strict mode optional
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "PIL.*",
    "numpy.*",
]
ignore_missing_imports = true

# ════════════════════════════════════════════════════════════════════════════════
# Coverage Configuration
# ════════════════════════════════════════════════════════════════════════════════

[tool.coverage.run]
branch = true
source = ["api", "core", "data", "training", "evaluation"]
omit = [
    "*/tests/*",
    "*/scripts/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
